--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body>
-<h1> This is my first git! </h1>
+<h1 style="color:greenyellow"> This is my first git! </h1>
 
 </body>
 </html>
